# fautodiff

./: .gitignore  AGENTS.md  README.md  mypy.ini  pyproject.toml  setup.cfg
doc/: directives.md  fadmod.md  fortran_support.md  preprocessor.md
docs/: directives.md  fortran_support.md
examples/: Makefile  allocate.f90  allocate_ad.f90  allocate_vars.f90  allocate_vars_ad.f90  array_slice.f90  array_slice_ad.f90  arrays.f90  arrays_ad.f90  block_construct.f90  block_construct_ad.f90  call_example.f90  call_example_ad.f90  call_module_vars.f90  call_module_vars_ad.f90  conditional_macro.F90  conditional_macro_ad.F90  conditional_macro_ad.f90  control_flow.f90  control_flow_ad.f90  cross_mod_a.f90  cross_mod_a_ad.f90  cross_mod_b.f90  cross_mod_b_ad.f90  derived_alloc.f90  derived_alloc_ad.f90  directive_const_arg.f90  directive_const_arg_ad.f90  directives.f90  directives_ad.f90  exit_cycle.f90  exit_cycle_ad.f90  generic_interface.f90  generic_interface_ad.f90  intrinsic_func.f90  intrinsic_func_ad.f90  keyword_args.f90  keyword_args_ad.f90  macro_args.F90  macro_args_ad.F90  (+50 more)
fautodiff/: __init__.py  cli.py  code_tree.py  fadmod.py  generator.py  intrinsic_derivatives.py  intrinsic_rules.py  operators.py  parser.py  validation_driver.py  var_dict.py  var_list.py  var_type.py
fortran_modules/: data_storage.f90  fautodiff_data_storage.f90  fautodiff_mpi.f90  fautodiff_stack.f90  gen_fautodiff_stack.py  gen_mpi_fadmod.py  ieee_arithmetic.fadmod  ieee_exceptions.fadmod  ieee_features.fadmod  iso_c_binding.fadmod  iso_fortran_env.fadmod  mpi.fadmod  mpi_ad.f90  (+1 more)
(+70 files in other folders)
